Refactor tests to solve some code smells